// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QuoteDetailsCard renders expanded state 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      collapsable={false}
      pointerEvents="box-none"
      style={
        {
          "zIndex": 1,
        }
      }
    >
      <View
        accessibilityElementsHidden={false}
        importantForAccessibility="auto"
        onLayout={[Function]}
        pointerEvents="box-none"
        style={null}
      >
        <View
          collapsable={false}
          pointerEvents="box-none"
          style={
            {
              "bottom": 0,
              "left": 0,
              "opacity": 1,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "zIndex": 0,
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "backgroundColor": "rgb(255, 255, 255)",
                "borderBottomColor": "rgb(216, 216, 216)",
                "flex": 1,
                "shadowColor": "rgb(216, 216, 216)",
                "shadowOffset": {
                  "height": 0.5,
                  "width": 0,
                },
                "shadowOpacity": 0.85,
                "shadowRadius": 0,
              }
            }
          />
        </View>
        <View
          collapsable={false}
          pointerEvents="box-none"
          style={
            {
              "height": 64,
              "maxHeight": undefined,
              "minHeight": undefined,
              "opacity": undefined,
              "transform": undefined,
            }
          }
        >
          <View
            pointerEvents="none"
            style={
              {
                "height": 20,
              }
            }
          />
          <View
            pointerEvents="box-none"
            style={
              {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                {
                  "marginHorizontal": 16,
                  "opacity": 1,
                }
              }
            >
              <Text
                accessibilityRole="header"
                aria-level="1"
                collapsable={false}
                numberOfLines={1}
                onLayout={[Function]}
                style={
                  {
                    "color": "rgb(28, 28, 30)",
                    "fontSize": 17,
                    "fontWeight": "600",
                  }
                }
              >
                Bridge
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
    <RNSScreenContainer
      onLayout={[Function]}
      style={
        {
          "flex": 1,
        }
      }
    >
      <RNSScreen
        activityState={2}
        collapsable={false}
        gestureResponseDistance={
          {
            "bottom": -1,
            "end": -1,
            "start": -1,
            "top": -1,
          }
        }
        onGestureCancel={[Function]}
        pointerEvents="box-none"
        sheetAllowedDetents="large"
        sheetCornerRadius={-1}
        sheetExpandsWhenScrolledToEdge={true}
        sheetGrabberVisible={false}
        sheetLargestUndimmedDetent="all"
        style={
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "zIndex": undefined,
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "opacity": 1,
            }
          }
        />
        <View
          accessibilityElementsHidden={false}
          closing={false}
          gestureVelocityImpact={0.3}
          importantForAccessibility="auto"
          onClose={[Function]}
          onGestureBegin={[Function]}
          onGestureCanceled={[Function]}
          onGestureEnd={[Function]}
          onOpen={[Function]}
          onTransition={[Function]}
          pointerEvents="box-none"
          style={
            [
              {
                "overflow": undefined,
              },
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            ]
          }
          transitionSpec={
            {
              "close": {
                "animation": "spring",
                "config": {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
              "open": {
                "animation": "spring",
                "config": {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
            }
          }
        >
          <View
            collapsable={false}
            needsOffscreenAlphaCompositing={false}
            pointerEvents="box-none"
            style={
              {
                "flex": 1,
              }
            }
          >
            <View
              collapsable={false}
              enabled={false}
              handlerTag={-1}
              handlerType="PanGestureHandler"
              onGestureHandlerEvent={[Function]}
              onGestureHandlerStateChange={[Function]}
              style={
                {
                  "flex": 1,
                  "transform": [
                    {
                      "translateX": 0,
                    },
                    {
                      "translateX": 0,
                    },
                  ],
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="none"
                style={
                  {
                    "backgroundColor": "rgb(242, 242, 242)",
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "shadowColor": "#000",
                    "shadowOffset": {
                      "height": 1,
                      "width": -1,
                    },
                    "shadowOpacity": 0.3,
                    "shadowRadius": 5,
                    "top": 0,
                    "width": 3,
                  }
                }
              />
              <View
                style={
                  [
                    {
                      "flex": 1,
                      "overflow": "hidden",
                    },
                    [
                      {
                        "backgroundColor": "rgb(242, 242, 242)",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                <View
                  style={
                    {
                      "flex": 1,
                      "flexDirection": "column-reverse",
                    }
                  }
                >
                  <View
                    style={
                      {
                        "flex": 1,
                      }
                    }
                  >
                    <View
                      style={
                        [
                          {},
                          undefined,
                        ]
                      }
                    >
                      <View
                        style={
                          [
                            {},
                            {
                              "backgroundColor": "#ffffff",
                              "borderColor": "#b7bbc866",
                              "borderRadius": 8,
                              "borderWidth": 1,
                              "gap": 12,
                              "marginBottom": 12,
                              "overflow": "hidden",
                              "paddingHorizontal": 16,
                              "paddingVertical": 12,
                            },
                          ]
                        }
                      >
                        <View
                          alignItems="center"
                          flexDirection="row"
                          justifyContent="space-between"
                          style={
                            [
                              {
                                "alignItems": "center",
                                "flexDirection": "row",
                                "justifyContent": "space-between",
                              },
                              undefined,
                            ]
                          }
                        >
                          <View
                            alignItems="center"
                            flexDirection="row"
                            style={
                              [
                                {
                                  "alignItems": "center",
                                  "flexDirection": "row",
                                },
                                {
                                  "flexDirection": "row",
                                  "flexWrap": "wrap",
                                  "maxWidth": "80%",
                                },
                              ]
                            }
                          >
                            <View
                              alignItems="center"
                              flexDirection="row"
                              gap={2}
                              style={
                                [
                                  {
                                    "alignItems": "center",
                                    "flexDirection": "row",
                                    "gap": 2,
                                  },
                                  {
                                    "flex": 1,
                                  },
                                ]
                              }
                            >
                              <View
                                onLayout={[Function]}
                                style={{}}
                                testID="badgenetwork"
                              >
                                <View
                                  style={
                                    {
                                      "alignItems": "center",
                                      "backgroundColor": "#ffffff",
                                      "borderColor": "#ffffff",
                                      "borderRadius": 8,
                                      "borderWidth": 1.5,
                                      "height": 24,
                                      "justifyContent": "center",
                                      "overflow": "hidden",
                                      "shadowColor": "#0000001a",
                                      "shadowOffset": {
                                        "height": 2,
                                        "width": 0,
                                      },
                                      "shadowOpacity": 1,
                                      "shadowRadius": 4,
                                      "width": 24,
                                    }
                                  }
                                >
                                  <Image
                                    onError={[Function]}
                                    resizeMode="contain"
                                    source={1}
                                    style={
                                      {
                                        "height": 24,
                                        "width": 24,
                                      }
                                    }
                                    testID="network-avatar-image"
                                  />
                                </View>
                              </View>
                              <Text
                                accessibilityRole="text"
                                numberOfLines={1}
                                style={
                                  {
                                    "color": "#121314",
                                    "flex": 1,
                                    "fontFamily": "Geist Medium",
                                    "fontSize": 16,
                                    "letterSpacing": 0,
                                    "lineHeight": 24,
                                  }
                                }
                              >
                                Solana
                              </Text>
                            </View>
                            <SvgMock
                              color="#121314"
                              fill="currentColor"
                              height={16}
                              name="Arrow2Right"
                              style={
                                {
                                  "height": 16,
                                  "width": 16,
                                }
                              }
                              width={16}
                            />
                            <View
                              alignItems="center"
                              flexDirection="row"
                              gap={2}
                              style={
                                [
                                  {
                                    "alignItems": "center",
                                    "flexDirection": "row",
                                    "gap": 2,
                                  },
                                  {
                                    "flex": 1,
                                  },
                                ]
                              }
                            >
                              <View
                                onLayout={[Function]}
                                style={{}}
                                testID="badgenetwork"
                              >
                                <View
                                  style={
                                    {
                                      "alignItems": "center",
                                      "backgroundColor": "#f3f5f9",
                                      "borderColor": "#ffffff",
                                      "borderRadius": 12,
                                      "borderWidth": 1.5,
                                      "height": 24,
                                      "justifyContent": "center",
                                      "overflow": "hidden",
                                      "shadowColor": "#0000001a",
                                      "shadowOffset": {
                                        "height": 2,
                                        "width": 0,
                                      },
                                      "shadowOpacity": 1,
                                      "shadowRadius": 4,
                                      "width": 24,
                                    }
                                  }
                                >
                                  <Text
                                    accessibilityRole="text"
                                    style={
                                      {
                                        "color": "#121314",
                                        "fontFamily": "Geist Regular",
                                        "fontSize": 16,
                                        "letterSpacing": 0,
                                        "lineHeight": 24,
                                      }
                                    }
                                  >
                                    ?
                                  </Text>
                                </View>
                              </View>
                              <Text
                                accessibilityRole="text"
                                numberOfLines={1}
                                style={
                                  {
                                    "color": "#121314",
                                    "flex": 1,
                                    "fontFamily": "Geist Medium",
                                    "fontSize": 16,
                                    "letterSpacing": 0,
                                    "lineHeight": 24,
                                  }
                                }
                              />
                            </View>
                          </View>
                          <View
                            style={
                              {
                                "transform": [
                                  {
                                    "rotate": "undefineddeg",
                                  },
                                ],
                              }
                            }
                          >
                            <TouchableOpacity
                              accessibilityLabel="Collapse quote details"
                              accessibilityRole="button"
                              activeOpacity={0.7}
                              onPress={[Function]}
                              testID="expand-quote-details"
                            >
                              <SvgMock
                                color="#b7bbc8"
                                fill="currentColor"
                                height={16}
                                name="ArrowDown"
                                style={
                                  {
                                    "height": 16,
                                    "width": 16,
                                  }
                                }
                                width={16}
                              />
                            </TouchableOpacity>
                          </View>
                        </View>
                        <View
                          style={
                            [
                              {
                                "alignItems": "center",
                                "flexDirection": "row",
                                "justifyContent": "space-between",
                                "overflow": "hidden",
                              },
                              [
                                undefined,
                              ],
                            ]
                          }
                        >
                          <View
                            style={
                              {
                                "alignItems": "flex-start",
                                "flex": 1,
                              }
                            }
                          >
                            <View
                              style={
                                {
                                  "alignItems": "center",
                                  "flexDirection": "row",
                                  "gap": 8,
                                }
                              }
                            >
                              <View
                                style={
                                  {
                                    "alignItems": "center",
                                    "flexDirection": "row",
                                  }
                                }
                              >
                                <Text
                                  accessibilityRole="text"
                                  style={
                                    {
                                      "color": "#121314",
                                      "fontFamily": "Geist Medium",
                                      "fontSize": 16,
                                      "letterSpacing": 0,
                                      "lineHeight": 24,
                                    }
                                  }
                                  testID="label"
                                >
                                  Network Fee
                                </Text>
                              </View>
                            </View>
                          </View>
                          <View
                            style={
                              {
                                "alignItems": "flex-end",
                                "flex": 1,
                              }
                            }
                          >
                            <View
                              style={
                                {
                                  "alignItems": "center",
                                  "flexDirection": "row",
                                  "gap": 8,
                                }
                              }
                            >
                              <View
                                style={
                                  {
                                    "alignItems": "center",
                                    "flexDirection": "row",
                                  }
                                }
                              >
                                <Text
                                  accessibilityRole="text"
                                  style={
                                    {
                                      "color": "#121314",
                                      "fontFamily": "Geist Regular",
                                      "fontSize": 16,
                                      "letterSpacing": 0,
                                      "lineHeight": 24,
                                    }
                                  }
                                  testID="label"
                                >
                                  0.01
                                </Text>
                              </View>
                            </View>
                          </View>
                        </View>
                        <View
                          style={
                            [
                              {
                                "alignItems": "center",
                                "flexDirection": "row",
                                "justifyContent": "space-between",
                                "overflow": "hidden",
                              },
                              [
                                undefined,
                              ],
                            ]
                          }
                        >
                          <View
                            style={
                              {
                                "alignItems": "flex-start",
                                "flex": 1,
                              }
                            }
                          >
                            <View
                              style={
                                {
                                  "alignItems": "center",
                                  "flexDirection": "row",
                                  "gap": 8,
                                }
                              }
                            >
                              <View
                                style={
                                  {
                                    "alignItems": "center",
                                    "flexDirection": "row",
                                  }
                                }
                              >
                                <Text
                                  accessibilityRole="text"
                                  style={
                                    {
                                      "color": "#121314",
                                      "fontFamily": "Geist Medium",
                                      "fontSize": 16,
                                      "letterSpacing": 0,
                                      "lineHeight": 24,
                                    }
                                  }
                                  testID="label"
                                >
                                  Time
                                </Text>
                              </View>
                            </View>
                          </View>
                          <View
                            style={
                              {
                                "alignItems": "flex-end",
                                "flex": 1,
                              }
                            }
                          >
                            <View
                              style={
                                {
                                  "alignItems": "center",
                                  "flexDirection": "row",
                                  "gap": 8,
                                }
                              }
                            >
                              <View
                                style={
                                  {
                                    "alignItems": "center",
                                    "flexDirection": "row",
                                  }
                                }
                              >
                                <Text
                                  accessibilityRole="text"
                                  style={
                                    {
                                      "color": "#121314",
                                      "fontFamily": "Geist Regular",
                                      "fontSize": 16,
                                      "letterSpacing": 0,
                                      "lineHeight": 24,
                                    }
                                  }
                                  testID="label"
                                >
                                  1 min
                                </Text>
                              </View>
                            </View>
                          </View>
                        </View>
                        <View
                          style={
                            [
                              {},
                              undefined,
                            ]
                          }
                        >
                          <View
                            style={
                              [
                                {
                                  "alignItems": "center",
                                  "flexDirection": "row",
                                  "justifyContent": "space-between",
                                  "overflow": "hidden",
                                },
                                [
                                  undefined,
                                ],
                              ]
                            }
                          >
                            <View
                              style={
                                {
                                  "alignItems": "flex-start",
                                  "flex": 1,
                                }
                              }
                            >
                              <View
                                style={
                                  {
                                    "alignItems": "center",
                                    "flexDirection": "row",
                                    "gap": 8,
                                  }
                                }
                              >
                                <View
                                  style={
                                    {
                                      "alignItems": "center",
                                      "flexDirection": "row",
                                    }
                                  }
                                >
                                  <Text
                                    accessibilityRole="text"
                                    style={
                                      {
                                        "color": "#121314",
                                        "fontFamily": "Geist Medium",
                                        "fontSize": 16,
                                        "letterSpacing": 0,
                                        "lineHeight": 24,
                                      }
                                    }
                                    testID="label"
                                  >
                                    Quote
                                  </Text>
                                  <TouchableOpacity
                                    accessibilityLabel="Why we recommend this quote tooltip"
                                    accessibilityRole="button"
                                    accessible={true}
                                    activeOpacity={1}
                                    disabled={false}
                                    onPress={[Function]}
                                    onPressIn={[Function]}
                                    onPressOut={[Function]}
                                    style={
                                      {
                                        "alignItems": "center",
                                        "borderRadius": 8,
                                        "height": 24,
                                        "justifyContent": "center",
                                        "opacity": 1,
                                        "width": 24,
                                      }
                                    }
                                  >
                                    <SvgMock
                                      color="#b7bbc8"
                                      fill="currentColor"
                                      height={16}
                                      name="Question"
                                      style={
                                        {
                                          "height": 16,
                                          "width": 16,
                                        }
                                      }
                                      width={16}
                                    />
                                  </TouchableOpacity>
                                </View>
                              </View>
                            </View>
                            <View
                              style={
                                {
                                  "alignItems": "flex-end",
                                  "flex": 1,
                                }
                              }
                            >
                              <View
                                style={
                                  {
                                    "alignItems": "center",
                                    "flexDirection": "row",
                                    "gap": 8,
                                  }
                                }
                              >
                                <View
                                  style={
                                    {
                                      "alignItems": "center",
                                      "flexDirection": "row",
                                    }
                                  }
                                >
                                  <Text
                                    accessibilityRole="text"
                                    style={
                                      {
                                        "color": "#121314",
                                        "fontFamily": "Geist Regular",
                                        "fontSize": 16,
                                        "letterSpacing": 0,
                                        "lineHeight": 24,
                                      }
                                    }
                                    testID="label"
                                  >
                                    1 ETH = 24.4 USDC
                                  </Text>
                                </View>
                              </View>
                            </View>
                          </View>
                        </View>
                        <View
                          gap={12}
                          style={
                            [
                              {
                                "gap": 12,
                              },
                              undefined,
                            ]
                          }
                        >
                          <View
                            style={
                              [
                                {
                                  "alignItems": "center",
                                  "flexDirection": "row",
                                  "justifyContent": "space-between",
                                  "overflow": "hidden",
                                },
                                [
                                  undefined,
                                ],
                              ]
                            }
                          >
                            <View
                              style={
                                {
                                  "alignItems": "flex-start",
                                  "flex": 1,
                                }
                              }
                            >
                              <View
                                style={
                                  {
                                    "alignItems": "center",
                                    "flexDirection": "row",
                                    "gap": 8,
                                  }
                                }
                              >
                                <View
                                  style={
                                    {
                                      "alignItems": "center",
                                      "flexDirection": "row",
                                    }
                                  }
                                >
                                  <Text
                                    accessibilityRole="text"
                                    style={
                                      {
                                        "color": "#121314",
                                        "fontFamily": "Geist Medium",
                                        "fontSize": 16,
                                        "letterSpacing": 0,
                                        "lineHeight": 24,
                                      }
                                    }
                                    testID="label"
                                  >
                                    Price Impact
                                  </Text>
                                </View>
                              </View>
                            </View>
                            <View
                              style={
                                {
                                  "alignItems": "flex-end",
                                  "flex": 1,
                                }
                              }
                            >
                              <View
                                style={
                                  {
                                    "alignItems": "center",
                                    "flexDirection": "row",
                                    "gap": 8,
                                  }
                                }
                              >
                                <View
                                  style={
                                    {
                                      "alignItems": "center",
                                      "flexDirection": "row",
                                    }
                                  }
                                >
                                  <Text
                                    accessibilityRole="text"
                                    style={
                                      {
                                        "color": "#121314",
                                        "fontFamily": "Geist Regular",
                                        "fontSize": 16,
                                        "letterSpacing": 0,
                                        "lineHeight": 24,
                                      }
                                    }
                                    testID="label"
                                  >
                                    -0.06%
                                  </Text>
                                </View>
                              </View>
                            </View>
                          </View>
                          <View
                            style={
                              [
                                {
                                  "alignItems": "center",
                                  "flexDirection": "row",
                                  "justifyContent": "space-between",
                                  "overflow": "hidden",
                                },
                                [
                                  undefined,
                                ],
                              ]
                            }
                          >
                            <View
                              style={
                                {
                                  "alignItems": "flex-start",
                                  "flex": 1,
                                }
                              }
                            >
                              <View
                                style={
                                  {
                                    "alignItems": "center",
                                    "flexDirection": "row",
                                    "gap": 8,
                                  }
                                }
                              >
                                <View
                                  style={
                                    {
                                      "alignItems": "center",
                                      "flexDirection": "row",
                                    }
                                  }
                                >
                                  <View
                                    alignItems="center"
                                    flexDirection="row"
                                    gap={4}
                                    style={
                                      [
                                        {
                                          "alignItems": "center",
                                          "flexDirection": "row",
                                          "gap": 4,
                                        },
                                        undefined,
                                      ]
                                    }
                                  >
                                    <TouchableOpacity
                                      activeOpacity={0.6}
                                      onPress={[Function]}
                                      style={
                                        {
                                          "alignItems": "center",
                                          "flexDirection": "row",
                                          "gap": 4,
                                        }
                                      }
                                      testID="edit-slippage-button"
                                    >
                                      <Text
                                        accessibilityRole="text"
                                        style={
                                          {
                                            "color": "#121314",
                                            "fontFamily": "Geist Medium",
                                            "fontSize": 16,
                                            "letterSpacing": 0,
                                            "lineHeight": 24,
                                          }
                                        }
                                      >
                                        Slippage
                                      </Text>
                                      <SvgMock
                                        color="#b7bbc8"
                                        fill="currentColor"
                                        height={16}
                                        name="Edit"
                                        style={
                                          {
                                            "height": 16,
                                            "width": 16,
                                          }
                                        }
                                        width={16}
                                      />
                                    </TouchableOpacity>
                                  </View>
                                </View>
                              </View>
                            </View>
                            <View
                              style={
                                {
                                  "alignItems": "flex-end",
                                  "flex": 1,
                                }
                              }
                            >
                              <View
                                style={
                                  {
                                    "alignItems": "center",
                                    "flexDirection": "row",
                                    "gap": 8,
                                  }
                                }
                              >
                                <View
                                  style={
                                    {
                                      "alignItems": "center",
                                      "flexDirection": "row",
                                    }
                                  }
                                >
                                  <Text
                                    accessibilityRole="text"
                                    style={
                                      {
                                        "color": "#121314",
                                        "fontFamily": "Geist Regular",
                                        "fontSize": 16,
                                        "letterSpacing": 0,
                                        "lineHeight": 24,
                                      }
                                    }
                                    testID="label"
                                  >
                                    0.5%
                                  </Text>
                                </View>
                              </View>
                            </View>
                          </View>
                        </View>
                      </View>
                      <Text
                        accessibilityRole="text"
                        style={
                          {
                            "color": "#686e7d",
                            "fontFamily": "Geist Regular",
                            "fontSize": 16,
                            "letterSpacing": 0,
                            "lineHeight": 24,
                            "textAlign": "center",
                          }
                        }
                      >
                        Includes 0.875% MM fee
                      </Text>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </RNSScreen>
    </RNSScreenContainer>
  </RNCSafeAreaProvider>
</View>
`;

exports[`QuoteDetailsCard renders initial state 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      collapsable={false}
      pointerEvents="box-none"
      style={
        {
          "zIndex": 1,
        }
      }
    >
      <View
        accessibilityElementsHidden={false}
        importantForAccessibility="auto"
        onLayout={[Function]}
        pointerEvents="box-none"
        style={null}
      >
        <View
          collapsable={false}
          pointerEvents="box-none"
          style={
            {
              "bottom": 0,
              "left": 0,
              "opacity": 1,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "zIndex": 0,
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "backgroundColor": "rgb(255, 255, 255)",
                "borderBottomColor": "rgb(216, 216, 216)",
                "flex": 1,
                "shadowColor": "rgb(216, 216, 216)",
                "shadowOffset": {
                  "height": 0.5,
                  "width": 0,
                },
                "shadowOpacity": 0.85,
                "shadowRadius": 0,
              }
            }
          />
        </View>
        <View
          collapsable={false}
          pointerEvents="box-none"
          style={
            {
              "height": 64,
              "maxHeight": undefined,
              "minHeight": undefined,
              "opacity": undefined,
              "transform": undefined,
            }
          }
        >
          <View
            pointerEvents="none"
            style={
              {
                "height": 20,
              }
            }
          />
          <View
            pointerEvents="box-none"
            style={
              {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                {
                  "marginHorizontal": 16,
                  "opacity": 1,
                }
              }
            >
              <Text
                accessibilityRole="header"
                aria-level="1"
                collapsable={false}
                numberOfLines={1}
                onLayout={[Function]}
                style={
                  {
                    "color": "rgb(28, 28, 30)",
                    "fontSize": 17,
                    "fontWeight": "600",
                  }
                }
              >
                Bridge
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
    <RNSScreenContainer
      onLayout={[Function]}
      style={
        {
          "flex": 1,
        }
      }
    >
      <RNSScreen
        activityState={2}
        collapsable={false}
        gestureResponseDistance={
          {
            "bottom": -1,
            "end": -1,
            "start": -1,
            "top": -1,
          }
        }
        onGestureCancel={[Function]}
        pointerEvents="box-none"
        sheetAllowedDetents="large"
        sheetCornerRadius={-1}
        sheetExpandsWhenScrolledToEdge={true}
        sheetGrabberVisible={false}
        sheetLargestUndimmedDetent="all"
        style={
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "zIndex": undefined,
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "opacity": 1,
            }
          }
        />
        <View
          accessibilityElementsHidden={false}
          closing={false}
          gestureVelocityImpact={0.3}
          importantForAccessibility="auto"
          onClose={[Function]}
          onGestureBegin={[Function]}
          onGestureCanceled={[Function]}
          onGestureEnd={[Function]}
          onOpen={[Function]}
          onTransition={[Function]}
          pointerEvents="box-none"
          style={
            [
              {
                "overflow": undefined,
              },
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            ]
          }
          transitionSpec={
            {
              "close": {
                "animation": "spring",
                "config": {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
              "open": {
                "animation": "spring",
                "config": {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
            }
          }
        >
          <View
            collapsable={false}
            needsOffscreenAlphaCompositing={false}
            pointerEvents="box-none"
            style={
              {
                "flex": 1,
              }
            }
          >
            <View
              collapsable={false}
              enabled={false}
              handlerTag={-1}
              handlerType="PanGestureHandler"
              onGestureHandlerEvent={[Function]}
              onGestureHandlerStateChange={[Function]}
              style={
                {
                  "flex": 1,
                  "transform": [
                    {
                      "translateX": 0,
                    },
                    {
                      "translateX": 0,
                    },
                  ],
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="none"
                style={
                  {
                    "backgroundColor": "rgb(242, 242, 242)",
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "shadowColor": "#000",
                    "shadowOffset": {
                      "height": 1,
                      "width": -1,
                    },
                    "shadowOpacity": 0.3,
                    "shadowRadius": 5,
                    "top": 0,
                    "width": 3,
                  }
                }
              />
              <View
                style={
                  [
                    {
                      "flex": 1,
                      "overflow": "hidden",
                    },
                    [
                      {
                        "backgroundColor": "rgb(242, 242, 242)",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                <View
                  style={
                    {
                      "flex": 1,
                      "flexDirection": "column-reverse",
                    }
                  }
                >
                  <View
                    style={
                      {
                        "flex": 1,
                      }
                    }
                  >
                    <View
                      style={
                        [
                          {},
                          undefined,
                        ]
                      }
                    >
                      <View
                        style={
                          [
                            {},
                            {
                              "backgroundColor": "#ffffff",
                              "borderColor": "#b7bbc866",
                              "borderRadius": 8,
                              "borderWidth": 1,
                              "gap": 12,
                              "marginBottom": 12,
                              "overflow": "hidden",
                              "paddingHorizontal": 16,
                              "paddingVertical": 12,
                            },
                          ]
                        }
                      >
                        <View
                          alignItems="center"
                          flexDirection="row"
                          justifyContent="space-between"
                          style={
                            [
                              {
                                "alignItems": "center",
                                "flexDirection": "row",
                                "justifyContent": "space-between",
                              },
                              undefined,
                            ]
                          }
                        >
                          <View
                            alignItems="center"
                            flexDirection="row"
                            style={
                              [
                                {
                                  "alignItems": "center",
                                  "flexDirection": "row",
                                },
                                {
                                  "flexDirection": "row",
                                  "flexWrap": "wrap",
                                  "maxWidth": "80%",
                                },
                              ]
                            }
                          >
                            <View
                              alignItems="center"
                              flexDirection="row"
                              gap={2}
                              style={
                                [
                                  {
                                    "alignItems": "center",
                                    "flexDirection": "row",
                                    "gap": 2,
                                  },
                                  {
                                    "flex": 1,
                                  },
                                ]
                              }
                            >
                              <View
                                onLayout={[Function]}
                                style={{}}
                                testID="badgenetwork"
                              >
                                <View
                                  style={
                                    {
                                      "alignItems": "center",
                                      "backgroundColor": "#ffffff",
                                      "borderColor": "#ffffff",
                                      "borderRadius": 8,
                                      "borderWidth": 1.5,
                                      "height": 24,
                                      "justifyContent": "center",
                                      "overflow": "hidden",
                                      "shadowColor": "#0000001a",
                                      "shadowOffset": {
                                        "height": 2,
                                        "width": 0,
                                      },
                                      "shadowOpacity": 1,
                                      "shadowRadius": 4,
                                      "width": 24,
                                    }
                                  }
                                >
                                  <Image
                                    onError={[Function]}
                                    resizeMode="contain"
                                    source={1}
                                    style={
                                      {
                                        "height": 24,
                                        "width": 24,
                                      }
                                    }
                                    testID="network-avatar-image"
                                  />
                                </View>
                              </View>
                              <Text
                                accessibilityRole="text"
                                numberOfLines={1}
                                style={
                                  {
                                    "color": "#121314",
                                    "flex": 1,
                                    "fontFamily": "Geist Medium",
                                    "fontSize": 16,
                                    "letterSpacing": 0,
                                    "lineHeight": 24,
                                  }
                                }
                              >
                                Solana
                              </Text>
                            </View>
                            <SvgMock
                              color="#121314"
                              fill="currentColor"
                              height={16}
                              name="Arrow2Right"
                              style={
                                {
                                  "height": 16,
                                  "width": 16,
                                }
                              }
                              width={16}
                            />
                            <View
                              alignItems="center"
                              flexDirection="row"
                              gap={2}
                              style={
                                [
                                  {
                                    "alignItems": "center",
                                    "flexDirection": "row",
                                    "gap": 2,
                                  },
                                  {
                                    "flex": 1,
                                  },
                                ]
                              }
                            >
                              <View
                                onLayout={[Function]}
                                style={{}}
                                testID="badgenetwork"
                              >
                                <View
                                  style={
                                    {
                                      "alignItems": "center",
                                      "backgroundColor": "#f3f5f9",
                                      "borderColor": "#ffffff",
                                      "borderRadius": 12,
                                      "borderWidth": 1.5,
                                      "height": 24,
                                      "justifyContent": "center",
                                      "overflow": "hidden",
                                      "shadowColor": "#0000001a",
                                      "shadowOffset": {
                                        "height": 2,
                                        "width": 0,
                                      },
                                      "shadowOpacity": 1,
                                      "shadowRadius": 4,
                                      "width": 24,
                                    }
                                  }
                                >
                                  <Text
                                    accessibilityRole="text"
                                    style={
                                      {
                                        "color": "#121314",
                                        "fontFamily": "Geist Regular",
                                        "fontSize": 16,
                                        "letterSpacing": 0,
                                        "lineHeight": 24,
                                      }
                                    }
                                  >
                                    ?
                                  </Text>
                                </View>
                              </View>
                              <Text
                                accessibilityRole="text"
                                numberOfLines={1}
                                style={
                                  {
                                    "color": "#121314",
                                    "flex": 1,
                                    "fontFamily": "Geist Medium",
                                    "fontSize": 16,
                                    "letterSpacing": 0,
                                    "lineHeight": 24,
                                  }
                                }
                              />
                            </View>
                          </View>
                          <View
                            style={
                              {
                                "transform": [
                                  {
                                    "rotate": "undefineddeg",
                                  },
                                ],
                              }
                            }
                          >
                            <TouchableOpacity
                              accessibilityLabel="Expand quote details"
                              accessibilityRole="button"
                              activeOpacity={0.7}
                              onPress={[Function]}
                              testID="expand-quote-details"
                            >
                              <SvgMock
                                color="#b7bbc8"
                                fill="currentColor"
                                height={16}
                                name="ArrowDown"
                                style={
                                  {
                                    "height": 16,
                                    "width": 16,
                                  }
                                }
                                width={16}
                              />
                            </TouchableOpacity>
                          </View>
                        </View>
                        <View
                          style={
                            [
                              {
                                "alignItems": "center",
                                "flexDirection": "row",
                                "justifyContent": "space-between",
                                "overflow": "hidden",
                              },
                              [
                                undefined,
                              ],
                            ]
                          }
                        >
                          <View
                            style={
                              {
                                "alignItems": "flex-start",
                                "flex": 1,
                              }
                            }
                          >
                            <View
                              style={
                                {
                                  "alignItems": "center",
                                  "flexDirection": "row",
                                  "gap": 8,
                                }
                              }
                            >
                              <View
                                style={
                                  {
                                    "alignItems": "center",
                                    "flexDirection": "row",
                                  }
                                }
                              >
                                <Text
                                  accessibilityRole="text"
                                  style={
                                    {
                                      "color": "#121314",
                                      "fontFamily": "Geist Medium",
                                      "fontSize": 16,
                                      "letterSpacing": 0,
                                      "lineHeight": 24,
                                    }
                                  }
                                  testID="label"
                                >
                                  Network Fee
                                </Text>
                              </View>
                            </View>
                          </View>
                          <View
                            style={
                              {
                                "alignItems": "flex-end",
                                "flex": 1,
                              }
                            }
                          >
                            <View
                              style={
                                {
                                  "alignItems": "center",
                                  "flexDirection": "row",
                                  "gap": 8,
                                }
                              }
                            >
                              <View
                                style={
                                  {
                                    "alignItems": "center",
                                    "flexDirection": "row",
                                  }
                                }
                              >
                                <Text
                                  accessibilityRole="text"
                                  style={
                                    {
                                      "color": "#121314",
                                      "fontFamily": "Geist Regular",
                                      "fontSize": 16,
                                      "letterSpacing": 0,
                                      "lineHeight": 24,
                                    }
                                  }
                                  testID="label"
                                >
                                  0.01
                                </Text>
                              </View>
                            </View>
                          </View>
                        </View>
                        <View
                          style={
                            [
                              {
                                "alignItems": "center",
                                "flexDirection": "row",
                                "justifyContent": "space-between",
                                "overflow": "hidden",
                              },
                              [
                                undefined,
                              ],
                            ]
                          }
                        >
                          <View
                            style={
                              {
                                "alignItems": "flex-start",
                                "flex": 1,
                              }
                            }
                          >
                            <View
                              style={
                                {
                                  "alignItems": "center",
                                  "flexDirection": "row",
                                  "gap": 8,
                                }
                              }
                            >
                              <View
                                style={
                                  {
                                    "alignItems": "center",
                                    "flexDirection": "row",
                                  }
                                }
                              >
                                <Text
                                  accessibilityRole="text"
                                  style={
                                    {
                                      "color": "#121314",
                                      "fontFamily": "Geist Medium",
                                      "fontSize": 16,
                                      "letterSpacing": 0,
                                      "lineHeight": 24,
                                    }
                                  }
                                  testID="label"
                                >
                                  Time
                                </Text>
                              </View>
                            </View>
                          </View>
                          <View
                            style={
                              {
                                "alignItems": "flex-end",
                                "flex": 1,
                              }
                            }
                          >
                            <View
                              style={
                                {
                                  "alignItems": "center",
                                  "flexDirection": "row",
                                  "gap": 8,
                                }
                              }
                            >
                              <View
                                style={
                                  {
                                    "alignItems": "center",
                                    "flexDirection": "row",
                                  }
                                }
                              >
                                <Text
                                  accessibilityRole="text"
                                  style={
                                    {
                                      "color": "#121314",
                                      "fontFamily": "Geist Regular",
                                      "fontSize": 16,
                                      "letterSpacing": 0,
                                      "lineHeight": 24,
                                    }
                                  }
                                  testID="label"
                                >
                                  1 min
                                </Text>
                              </View>
                            </View>
                          </View>
                        </View>
                        <View
                          style={
                            [
                              {},
                              undefined,
                            ]
                          }
                        >
                          <View
                            style={
                              [
                                {
                                  "alignItems": "center",
                                  "flexDirection": "row",
                                  "justifyContent": "space-between",
                                  "overflow": "hidden",
                                },
                                [
                                  undefined,
                                ],
                              ]
                            }
                          >
                            <View
                              style={
                                {
                                  "alignItems": "flex-start",
                                  "flex": 1,
                                }
                              }
                            >
                              <View
                                style={
                                  {
                                    "alignItems": "center",
                                    "flexDirection": "row",
                                    "gap": 8,
                                  }
                                }
                              >
                                <View
                                  style={
                                    {
                                      "alignItems": "center",
                                      "flexDirection": "row",
                                    }
                                  }
                                >
                                  <Text
                                    accessibilityRole="text"
                                    style={
                                      {
                                        "color": "#121314",
                                        "fontFamily": "Geist Medium",
                                        "fontSize": 16,
                                        "letterSpacing": 0,
                                        "lineHeight": 24,
                                      }
                                    }
                                    testID="label"
                                  >
                                    Quote
                                  </Text>
                                  <TouchableOpacity
                                    accessibilityLabel="Why we recommend this quote tooltip"
                                    accessibilityRole="button"
                                    accessible={true}
                                    activeOpacity={1}
                                    disabled={false}
                                    onPress={[Function]}
                                    onPressIn={[Function]}
                                    onPressOut={[Function]}
                                    style={
                                      {
                                        "alignItems": "center",
                                        "borderRadius": 8,
                                        "height": 24,
                                        "justifyContent": "center",
                                        "opacity": 1,
                                        "width": 24,
                                      }
                                    }
                                  >
                                    <SvgMock
                                      color="#b7bbc8"
                                      fill="currentColor"
                                      height={16}
                                      name="Question"
                                      style={
                                        {
                                          "height": 16,
                                          "width": 16,
                                        }
                                      }
                                      width={16}
                                    />
                                  </TouchableOpacity>
                                </View>
                              </View>
                            </View>
                            <View
                              style={
                                {
                                  "alignItems": "flex-end",
                                  "flex": 1,
                                }
                              }
                            >
                              <View
                                style={
                                  {
                                    "alignItems": "center",
                                    "flexDirection": "row",
                                    "gap": 8,
                                  }
                                }
                              >
                                <View
                                  style={
                                    {
                                      "alignItems": "center",
                                      "flexDirection": "row",
                                    }
                                  }
                                >
                                  <Text
                                    accessibilityRole="text"
                                    style={
                                      {
                                        "color": "#121314",
                                        "fontFamily": "Geist Regular",
                                        "fontSize": 16,
                                        "letterSpacing": 0,
                                        "lineHeight": 24,
                                      }
                                    }
                                    testID="label"
                                  >
                                    1 ETH = 24.4 USDC
                                  </Text>
                                </View>
                              </View>
                            </View>
                          </View>
                          <View
                            style={
                              [
                                {},
                                {
                                  "bottom": 0,
                                  "height": 30,
                                  "left": 0,
                                  "position": "absolute",
                                  "right": 0,
                                },
                              ]
                            }
                          >
                            <RNSVGSvgView
                              bbHeight="30"
                              bbWidth="100%"
                              focusable={false}
                              height="30"
                              style={
                                [
                                  {
                                    "backgroundColor": "transparent",
                                    "borderWidth": 0,
                                  },
                                  {
                                    "flex": 0,
                                    "height": 30,
                                    "width": "100%",
                                  },
                                ]
                              }
                              width="100%"
                            >
                              <RNSVGGroup
                                fill={
                                  {
                                    "payload": 4278190080,
                                    "type": 0,
                                  }
                                }
                              >
                                <RNSVGDefs>
                                  <RNSVGLinearGradient
                                    gradient={
                                      [
                                        0,
                                        16777215,
                                        1,
                                        -1,
                                      ]
                                    }
                                    gradientTransform={null}
                                    gradientUnits={0}
                                    name="fadeGradient"
                                    x1="0"
                                    x2="0"
                                    y1="0"
                                    y2="1"
                                  />
                                </RNSVGDefs>
                                <RNSVGRect
                                  fill={
                                    {
                                      "brushRef": "fadeGradient",
                                      "type": 1,
                                    }
                                  }
                                  height="30"
                                  propList={
                                    [
                                      "fill",
                                    ]
                                  }
                                  width="100%"
                                  x="0"
                                  y="0"
                                />
                              </RNSVGGroup>
                            </RNSVGSvgView>
                          </View>
                        </View>
                      </View>
                      <Text
                        accessibilityRole="text"
                        style={
                          {
                            "color": "#686e7d",
                            "fontFamily": "Geist Regular",
                            "fontSize": 16,
                            "letterSpacing": 0,
                            "lineHeight": 24,
                            "textAlign": "center",
                          }
                        }
                      >
                        Includes 0.875% MM fee
                      </Text>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </RNSScreen>
    </RNSScreenContainer>
  </RNCSafeAreaProvider>
</View>
`;
